--- a/config.yaml
+++ b/config.yaml
@@ -168,7 +168,7 @@ params:
 
     colorScheme:
         # Display toggle
-        toggle: true
+        toggle: false
 
         # Available values: auto, light, dark
         default: dark
