--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ publishDir: docs
 languages:
     zh-tw:
         languageName: 中文
-        title: ☀️有病呻吟
+        title: 曜多☀️有病呻吟
         weight: 1
 
 # Change it to your Disqus shortname before using
